--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Pacifico&display=swap');
 
+
+
+
+
+.title {
+	width: 100%;
+	height: 45px;
+	background: #121212;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+}
+.LJ{
+	color: #fff;
+	text-shadow: 
+		#0ff 0 0 12px,
+		#0ff 0 0 24px,
+		#0ff 0 0 36px;
+	font-size: 30px;
+	font-family: 'Pacifico', cursive;
+}
